Fixing bug 155334 -- zombie progress dialog left after doing a File | Save As in plain text format. We were checking the STATE_IS_NETWORK flag to decide when the download has finished, but this flag is not included for plain text saves (nsWebBrowserPersist doesn't give it to us). So we look at the start flags, and make sure the end flag matches on this bit. Also detabbed the file.